--- a/HimmunHedelmaPeli/pom.xml
+++ b/HimmunHedelmaPeli/pom.xml
@@ -43,6 +43,19 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.8</version>
+                <configuration>
+                    <targetClasses>
+                        <param>com.zirinna.himmunhedelmapeli.gamelogic.*</param>
+                        <param>com.zirinna.himmunhedelmapeli.gameobjects.*</param>
+                    </targetClasses>
+                    <excludedClasses>
+                        <param>com.zirinna.himmunhedelmapeli.MainApp.java</param>
+                    </excludedClasses>
+                    <targetTests>
+                        <param>com.zirinna.himmunhedelmapeli.*</param>
+                        <param>com.zirinna.himmunhedelmapeli.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -63,6 +76,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-checkstyle-plugin</artifactId>
+      <version>2.17</version>
+      <configuration>
+        <configLocation>checkstyle.xml</configLocation>
+      </configuration>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jxr-plugin</artifactId>
+      <version>2.5</version>
+    </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
