--- a/HimmunHedelmaPeli/pom.xml
+++ b/HimmunHedelmaPeli/pom.xml
@@ -12,7 +12,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>com.zirinna.himmunhedelmapeli.MainApp</mainClass>
-        
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
