lisää testejä, uusi pit ja checkstyle

--- a/HimmunHedelmaPeli/pom.xml
+++ b/HimmunHedelmaPeli/pom.xml
@@ -52,6 +52,8 @@
                     <excludedClasses>
                         <param>com.zirinna.himmunhedelmapeli.MainApp.java</param>
                     </excludedClasses>
+                    <excludedMethods>
+                    </excludedMethods>
                     <targetTests>
                         <param>com.zirinna.himmunhedelmapeli.*</param>
                         <param>com.zirinna.himmunhedelmapeli.*</param>
